Minor bug fix, style [wrap width] update

--- a/D4St-Spa/src/styles.css
+++ b/D4St-Spa/src/styles.css
@@ -164,10 +164,10 @@ body img {
 
 .wrap{
 	display:table;
-	height:56%;
-	width:85%;
-    max-width:85%;
-	max-height:56%;
+	height:65%;
+	width:75%;
+    max-width:75%;
+	max-height:65%;
     margin:auto;
     position:absolute;
     top: -36vh;
